# JDBot-Revolt

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt
